--- a/swarm-login-service/src/main/resources/application.yml
+++ b/swarm-login-service/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:swarm-test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
     username: sa
     password:
+  jpa:
+    hibernate:
+      ddl-auto: create
   h2:
     console:
       enabled: true
