feat: Dockerfile 정의

--- a/swarm-login-service/build.gradle
+++ b/swarm-login-service/build.gradle
@@ -18,6 +18,10 @@ configurations {
     }
 }
 
+bootJar {
+    archiveFileName = "login-service.jar"
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
